After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694941 - memory leak in totem_pl_parser_can_parse_from_data
memory leak in totem_pl_parser_can_parse_from_data
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
3.4.x
Other All
: Normal minor
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-01 16:38 UTC by Mateu Batle
Modified: 2013-03-01 17:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch fixing memory leaks (1.19 KB, patch)
2013-03-01 16:38 UTC, Mateu Batle
committed Details | Review

Description Mateu Batle 2013-03-01 16:38:16 UTC
Created attachment 237720 [details] [review]
Patch fixing memory leaks

mimetype is not freed