plparser: Fixed memleak in totem_pl_parser_can_parse_from_data

https://bugzilla.gnome.org/show_bug.cgi?id=694941